@@ -96,7 +96,7 @@ public class HttpTriggerFunction extends BaseFunction {
 
     private void sendToDeadLetterQueue(String filePath, String errorMessage) {
         try {
-            String message = String.format("File: %s, Error: %s", filePath, errorMessage);
+            String message = "File: %s, Error: %s".formatted(filePath, errorMessage);
             queueService.sendToDeadLetterQueue(message);
         } catch (Exception e) {
             log.error("Failed to send message to dead-letter queue: {}", e.getMessage(), e);
